Bug fix - media spacing

--- a/src/style.css
+++ b/src/style.css
@@ -284,7 +284,6 @@ iframe{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 0 20px 0 20px;
 }
 
 .promoVidWrapper{
